--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ vignettes/*.pdf
 GSE109381/
 download_geo/GSE51032/
 GSE51032/
-download_geo/preprocessCore
+download_geo/preprocessCore/config*
+download_geo/preprocessCore/src/*
