--- a/download_geo/Dockerfile
+++ b/download_geo/Dockerfile
@@ -5,7 +5,7 @@ FROM bioconductor/bioconductor_docker:devel
 WORKDIR /download_geo
 
 # Install packages
-RUN R -e "install.packages('BiocManager'); library('BiocManager'); BiocManager::install('GEOquery'); BiocManager::install('FlowSorted.Blood.450k'); BiocManager::install('minfi'); BiocManager::install('IlluminaHumanMethylation450kanno.ilmn12.hg19'); BiocManager::install('IlluminaHumanMethylation450kmanifest'); BiocManager::install('limma'); BiocManager::install('missMethyl')"
+RUN R -e "install.packages('BiocManager'); library('BiocManager'); BiocManager::install('FlowSorted.Blood.450k'); BiocManager::install('GEOquery'); BiocManager::install('FlowSorted.Blood.450k'); BiocManager::install('minfi'); BiocManager::install('IlluminaHumanMethylation450kanno.ilmn12.hg19'); BiocManager::install('IlluminaHumanMethylation450kmanifest'); BiocManager::install('limma'); BiocManager::install('missMethyl')"
 
 # Correct the Blas error
 RUN git clone https://github.com/bmbolstad/preprocessCore.git && cd preprocessCore/ && R CMD INSTALL --configure-args="--disable-threading" .
